--- a/03/package.json
+++ b/03/package.json
@@ -2,11 +2,11 @@
   "name": "counter-app-vite",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
@@ -14,9 +14,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@types/jest": "^29.2.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-jest": "^29.2.1",
+    "jest": "^29.2.1",
     "vite": "^3.1.0"
   }
 }
